# actionq

./: .gitignore  Cargo.toml  README.md  package-lock.json  run-debug.sh  run.sh  turn_on.sh
actionq-common/: Cargo.toml
actionq-common/src/: lib.rs
actionq-ctl/: Cargo.toml  Cargo.toml.save
actionq-ctl/src/: firebase.rs  main.rs
actionq-engine/: Cargo.toml
actionq-engine/src/: .session.rs.swp  common.rs  exercise.rs  firebase.rs  main.rs  network.rs  pose.rs  session.rs  ui.rs
actionq-mock/: Cargo.toml  index.html
actionq-mock/exercises/: curl.lua  curl_complete.lua  curl_widgets.lua  gambe.lua  tronco.lua
actionq-mock/src/: camera.rs  main.rs  yolo.rs
actionq-motion/: Cargo.toml  exercise.yaml
actionq-motion/data/: sample.lua  sample.yaml
actionq-motion/src/: common.rs  lib.rs  lua.rs  widget.rs
actionq-simple/: Cargo.toml
actionq-simple/exercises/: alzata_3D.lua  curl_3D.lua  ginocchia_3D.lua  tronco_3D.lua
actionq-simple/exercises/demo/: alzata_3D.lua  curl_3D.lua  ginocchia_3D.lua  tronco_3D.lua
actionq-simple/src/: main.rs
actionq-videopose/: Cargo.toml  build.rs
actionq-videopose/cpp/: videopose.cpp
actionq-videopose/src/: lib.rs  main.rs
actionq-web/: index.html  index.old.html  serve.sh  source.js  style.css
actionq-zed/: Cargo.toml  build.rs
actionq-zed/include/: zed.hh
actionq-zed/src/: lib.rs  zed.cc  zed.rs
engine/: Cargo.toml
engine/src/: hpe.rs  main.rs  network.rs  pose.rs  session.rs
exercises/: curl_2D.lua
exercises/1/: 3B9X4qgufitatUxbiPe0.json  fsm.json
exercises/exercises/: Bd6YlhEB1DZA37Zp3vjs.fsm
hpe/: .gitignore  engine.cpp  inference.cpp
hpe/include/: engine.hpp
libpose/: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  build.sh  inference.cpp  pose.cpp
libpose-crate/: Cargo.toml  build.rs
libpose-crate/src/: main.rs
libpose/include/: pose.hpp
libpose/include/jetson-utils/: timespec.h
motion/: Cargo.toml
motion/data/: exercise.yaml  sample.json
motion/src/: lib.rs
prepose/: Cargo.toml  bootstrap.sh  build.rs
prepose/cpp/: library.cpp
prepose/src/: lib.rs
