[workspace]
members = [
    "actionq-engine", 
    "actionq-motion",
    "actionq-common", 
    "actionq-zed"
, "actionq-simple"]
resolver = "2"

[build]
incremental = true

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
glam = { version = "0.30.3", features = ["serde"] }