[package]
name = "actionq-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40.0", features = ["rt", "macros"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.20", features = ["derive"] }
firestore = "0.43.1"

actionq-motion = { path = "../actionq-motion" }
actionq-common = { path = "../actionq-common" }
uuid = { version = "1.17.0", features = ["v4"] }
