[package]
name = "prepare_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["net","sync","rt-multi-thread","macros","signal"] }
tokio-tungstenite = "0.23.1"
tungstenite = "0.23.0"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
glam = "0.29.0"

motion = { path = "../actionq-motion" }
videopose = { path = "../actionq-videopose" }