[package]
name = "actionq-motion"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
mlua = { version = "0.10.0", features = ["lua54", "vendored", "send", "serialize"] }
glam = { workspace = true }

actionq-common = { path = "../actionq-common" }
